# unit-testing-example

./: .clang-format  CMakeLists.txt  LICENSE
doc/: classes.plantuml
src/: CMakeLists.txt  ConsoleOutput.cpp  ConsoleOutput.h  Output.cpp  Output.h  OutputInterface.h  WordGenerator.cpp  WordGenerator.h  WordGeneratorInterface.h  WordWriter.cpp  WordWriter.h  main.cpp
tests/: CMakeLists.txt  OutputFake.h  WordGeneratorFake_HandWritten.h  WordWriterTests.cpp
